--- a/html/settings.html
+++ b/html/settings.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="/gfx/reset.css">
     <link rel="stylesheet" type="text/css" href="/gfx/main.css">
     <link rel="stylesheet" type="text/css" href="/gfx/settings.css">
+    <script src="/js/constants.js"></script>
+    <script src="/js/settings_utils_helper.js"></script>
     <script src="/js/settings_utils.js"></script>
     <script src="/js/settings_helper.js"></script>
     <script src="/js/settings.js"></script>
@@ -31,6 +33,7 @@
         <h2>Dátové zostavy</h2>
         <i>Oddeľujte jednotlivé URL na dátové zostavy novým riadkom</i>
         <article>
+            <input type="hidden" id="dataSetsEnviromentId_0">
             <input type="text" id="dataSetsEnviroment_0" placeholder="Názov prostredia..." class="disabled" tabindex="-1">
             <br>
             <textarea id="dataSets_0" cols="80" rows="5" placeholder="Dátové zdroje..."></textarea>
