prerequisites for multiple enviroments support

--- a/html/settings.html
+++ b/html/settings.html
@@ -35,10 +35,11 @@
         <article>
             <input type="hidden" id="dataSetsEnviromentId_0">
             <input type="text" id="dataSetsEnviroment_0" placeholder="Názov prostredia..." class="disabled" tabindex="-1">
+            <button id="removeEnviroment_0" class="disabled" tabindex="-1">Odstrániť prostredie</button>
             <br>
             <textarea id="dataSets_0" cols="80" rows="5" placeholder="Dátové zdroje..."></textarea>
         </article>
-        <button id="addNewEnviromentDataets" class="disabled" tabindex="-1">Pridať ďalšie prostredie</button>
+        <button id="addNewEnviromentDataSets" class="disabled" tabindex="-1">Pridať ďalšie prostredie</button>
     </section>
 
     <section class="right">
