--- a/html/popup.html
+++ b/html/popup.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="/gfx/reset.css">
     <link rel="stylesheet" type="text/css" href="/gfx/main.css">
     <link rel="stylesheet" type="text/css" href="/gfx/popup.css">
+    <script src="/js/logger_helper.js"></script>
+    <script src="/js/logger.js"></script>
     <script src="/js/constants.js"></script>
     <script src="/js/settings_utils_helper.js"></script>
     <script src="/js/settings_utils.js"></script>
