abandoning this plain old js shit

--- a/html/popup.html
+++ b/html/popup.html
@@ -35,7 +35,7 @@
     </section>
 
     <section>
-      <select id="selectEnviroment" class="disabled" tabindex="-1">
+      <select id="selectEnviroment">
         <option selected disabled hidden id="selectEnviromentDefaultOption">Vybrať prostredie...</option>
       </select>
       <button id="goToOptions">Nastavenia</button>
